# vegas-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: crate.yml  rust.yml
benches/: bench_energy.rs  bench_integration.rs  bench_spin.rs
docs/: film.json  input.toml  metropolis.toml  structure.json  unitcell.json  wolff.toml
src/: accumulator.rs  energy.rs  error.rs  hamiltonian.rs  input.rs  instrument.rs  integrator.rs  io.rs  lattice.rs  lib.rs  machine.rs  main.rs  observables.rs  output.rs  program.rs  state.rs  termostat.rs  thermostat.rs  util.rs
src/sample/: lattice.rs  mod.rs  util.rs
src/vegas/: energy.rs  integrator.rs  lattice.rs  lib.rs  state.rs  util.rs
