[package]
name = "vegas"
version = "0.3.0"
authors = ["Oscar Arbelaez <oscar@arbelaez.dev>"]
description = "Little Monte Carlo code in rust"
keywords = ["Monte-Carlo", "MCMC", "physics"]
readme = "README.md"
repository = "https://github.com/odarbelaeze/vegas-rs"
documentation = "https://github.com/odarbelaeze/vegas-rs"
license = "MIT"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
vegas-lattice = "0.8"
sprs = "0.11.1"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
rand_pcg = "0.3.1"
thiserror = "1.0.63"
toml = { version = "0.8.19", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }
parquet = "54.0.0"
arrow = "54.0.0"
