[package]
name = "vegas"
version = "0.3.0"
authors = ["Oscar Arbelaez <oscar@arbelaez.dev>"]
description = "Little Monte Carlo code in rust"
keywords = ["Monte-Carlo", "MCMC", "physics"]
readme = "README.md"
repository = "https://github.com/odarbelaeze/vegas-rs"
documentation = "https://github.com/odarbelaeze/vegas-rs"
license = "MIT"
edition = "2024"

[dependencies]
rand = { version = "0.9", features = ["small_rng"] }
vegas-lattice = "0.11"
sprs = "0.11"
clap = { version = "4.5", features = ["cargo", "derive"] }
rand_pcg = "0.9"
thiserror = "2.0"
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
